# mycv

./: .gitignore  README.md
backend/: .gitignore  API.md  README.md  pyproject.toml  render.yaml
backend/data/: cv_content_example.json  cv_personal_data_example.json
backend/data/templates/: core_competencies.html  courses.html  cv_base.html  cv_template.html  education.html  header.html  key_projects.html  languages.html  professional_experience.html  professional_summary.html
backend/src/: database.py  models.py
backend/src/api/v1/: auth.py  cvs.py  main.py  profile.py  providers.py  settings.py
backend/src/service/: ai_optimizer.py  cv_renderer.py  pdf_generator.py  providers.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AppLayout.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  Profile.tsx  Settings.tsx  Signup.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
